Fixed alignment issues with right aligned input/select in the settings menu

--- a/page/settings.css
+++ b/page/settings.css
@@ -98,7 +98,7 @@ legend {
 
 label.right-align input,
 label.right-align select {
-	display: flex;
+	float: right;
 	margin-right: 0px;
 	margin-left: auto;
 }
@@ -123,7 +123,7 @@ textarea {
 }
 
 div.buttons-header {
-	display:none;
+	display: none;
 	width: 600px;
 	flex-direction: row;
 	margin-bottom: 10px;
